更新错误处理

--- a/examples/index.html
+++ b/examples/index.html
@@ -11,6 +11,7 @@
       <li><a href="simple">Simple</a></li>
       <li><a href="base">base</a></li>
       <li><a href="header">header</a></li>
+      <li><a href="error">error</a></li>
     </ul>
   </body>
 </html>
